--- a/ServiceDemo/aidldemo/build.gradle
+++ b/ServiceDemo/aidldemo/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.1"
 
     defaultConfig {
-        applicationId "com.example.servicedemo"
+        applicationId "com.example.aidldemo"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
